--- a/SpotifyPlayerLibrary/SpotifyPlayerLibrary/SpotifyPlayerLibrary.csproj
+++ b/SpotifyPlayerLibrary/SpotifyPlayerLibrary/SpotifyPlayerLibrary.csproj
@@ -47,8 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpotifyApiManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
